; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac_test/extr_mac_test.c_test_socket_check_listen.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac_test/extr_mac_test.c_test_socket_check_listen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucred = type { %struct.label* }
%struct.socket = type { i32 }
%struct.label = type { i32 }

@MAGIC_CRED = common dso_local global i32 0, align 4
@MAGIC_SOCKET = common dso_local global i32 0, align 4
@socket_check_listen = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ucred*, %struct.socket*, %struct.label*)* @test_socket_check_listen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_socket_check_listen(%struct.ucred* %0, %struct.socket* %1, %struct.label* %2) #0 {
  %4 = alloca %struct.ucred*, align 8
  %5 = alloca %struct.socket*, align 8
  %6 = alloca %struct.label*, align 8
  store %struct.ucred* %0, %struct.ucred** %4, align 8
  store %struct.socket* %1, %struct.socket** %5, align 8
  store %struct.label* %2, %struct.label** %6, align 8
  %7 = load %struct.ucred*, %struct.ucred** %4, align 8
  %8 = getelementptr inbounds %struct.ucred, %struct.ucred* %7, i32 0, i32 0
  %9 = load %struct.label*, %struct.label** %8, align 8
  %10 = load i32, i32* @MAGIC_CRED, align 4
  %11 = call i32 @LABEL_CHECK(%struct.label* %9, i32 %10)
  %12 = load %struct.socket*, %struct.socket** %5, align 8
  %13 = call i32 @SOCK_LOCK(%struct.socket* %12)
  %14 = load %struct.label*, %struct.label** %6, align 8
  %15 = load i32, i32* @MAGIC_SOCKET, align 4
  %16 = call i32 @LABEL_CHECK(%struct.label* %14, i32 %15)
  %17 = load %struct.socket*, %struct.socket** %5, align 8
  %18 = call i32 @SOCK_UNLOCK(%struct.socket* %17)
  %19 = load i32, i32* @socket_check_listen, align 4
  %20 = call i32 @COUNTER_INC(i32 %19)
  ret i32 0
}

declare dso_local i32 @LABEL_CHECK(%struct.label*, i32) #1

declare dso_local i32 @SOCK_LOCK(%struct.socket*) #1

declare dso_local i32 @SOCK_UNLOCK(%struct.socket*) #1

declare dso_local i32 @COUNTER_INC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
